[gd_scene load_steps=24 format=3 uid="uid://cag7m04kyrg2u"]

[ext_resource type="Texture2D" uid="uid://i0hcpaau77ti" path="res://Visual/sprites/investigation.png" id="1_cxio4"]
[ext_resource type="Script" uid="uid://24njsyi3fshr" path="res://Scripts/mail_question_handler.gd" id="2_csxm7"]
[ext_resource type="Resource" uid="uid://cyxbktr0hqr1d" path="res://Resources/email_cycliste.tres" id="3_kcuqx"]
[ext_resource type="Texture2D" uid="uid://e80b8kjgrck1" path="res://Visual/sprites/investigation_top.png" id="4_0t52g"]
[ext_resource type="Texture2D" uid="uid://difal78unv801" path="res://Visual/sprites/darksquare.png" id="5_0nn6o"]
[ext_resource type="Texture2D" uid="uid://bxs2mykxvgx00" path="res://Visual/sprites/profiles/shindy.png" id="6_wr3gm"]
[ext_resource type="Texture2D" uid="uid://dwlmm8jucom6s" path="res://Visual/sprites/defaultsquaredisabled.png" id="7_di0oy"]
[ext_resource type="Texture2D" uid="uid://cwc2clpt7nust" path="res://Visual/sprites/defaultsquarefocus.png" id="8_vckge"]
[ext_resource type="Script" uid="uid://c5rgyewbeb3x7" path="res://Scripts/body.gd" id="9_oiid6"]
[ext_resource type="Script" uid="uid://dgpft72taljbh" path="res://Scripts/bottom_investigation.gd" id="10_uoko6"]
[ext_resource type="Texture2D" uid="uid://bor1q31p2kkni" path="res://Visual/sprites/popup.png" id="11_csxm7"]
[ext_resource type="Script" uid="uid://cf85k2k04kmhi" path="res://Scripts/popup.gd" id="12_kcuqx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d1ilt"]
texture = ExtResource("4_0t52g")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 96, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6iyac"]
load_path = "res://.godot/imported/defaultsquaredisabled.png-ab8cf1216283b61b1037e6223cbcf775.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fdnlq"]
texture = SubResource("CompressedTexture2D_6iyac")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6iyac"]
texture = ExtResource("5_0nn6o")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jkdf5"]
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0
texture = ExtResource("7_di0oy")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_wsu2k"]
font_size = 40
font_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.3254902)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_fdnlq"]
font_size = 20
font_color = Color(0.27, 0.27, 0.27, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsu2k"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 4.0
texture = ExtResource("8_vckge")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(1, 1, 1, 0.3647059)

[sub_resource type="LabelSettings" id="LabelSettings_jkdf5"]
font_size = 20
font_color = Color(0.5729883, 0.5729883, 0.5729883, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_k12tt"]
font_size = 40
font_color = Color(0.27387273, 0.27387273, 0.27387273, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kcuqx"]
texture = ExtResource("11_csxm7")
texture_margin_left = 64.0
texture_margin_top = 4.0
texture_margin_right = 27.0
texture_margin_bottom = 20.0
expand_margin_left = 2.0
expand_margin_top = 5.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
region_rect = Rect2(0, 0, 96, 96)

[node name="Investigation" type="NinePatchRect"]
z_index = 20
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 238.0
offset_top = 1080.0
offset_right = 1238.0
offset_bottom = 2013.0005
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
texture = ExtResource("1_cxio4")
region_rect = Rect2(0, 0, 128, 75)
patch_margin_left = 12
patch_margin_top = 51
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource("2_csxm7")
email = ExtResource("3_kcuqx")

[node name="Down" type="Button" parent="."]
z_index = -1
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_top = -69.0
offset_right = 147.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4700758, 0.47007585, 0.47007567, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_d1ilt")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fdnlq")
text = "\\\\CLOSE//
."

[node name="ScrollContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 52.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="Panel" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 500.625)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_6iyac")

[node name="Panel" type="Panel" parent="ScrollContainer/Top"]
custom_minimum_size = Vector2(176, 176)
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 174.0
offset_bottom = 174.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_6iyac")

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Top/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 168.0
texture = ExtResource("6_wr3gm")

[node name="Name" type="Label" parent="ScrollContainer/Top"]
layout_mode = 0
offset_left = 190.0
offset_top = 13.0
offset_right = 518.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_jkdf5")
text = "Shindy O' SAWL"
label_settings = SubResource("LabelSettings_wsu2k")

[node name="email" type="Label" parent="ScrollContainer/Top"]
layout_mode = 0
offset_left = 190.0
offset_top = 71.0
offset_right = 518.0
offset_bottom = 99.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_jkdf5")
text = "shinOSOSO@Jmail.com"
label_settings = SubResource("LabelSettings_fdnlq")

[node name="date" type="Label" parent="ScrollContainer/Top"]
layout_mode = 0
offset_left = 190.0
offset_top = 104.0
offset_right = 368.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_wsu2k")
text = "August 19, 2026"
label_settings = SubResource("LabelSettings_jkdf5")

[node name="body" type="RichTextLabel" parent="ScrollContainer/Top"]
layout_mode = 0
offset_left = 190.0
offset_top = 200.0
offset_right = 961.0
offset_bottom = 432.0
mouse_filter = 1
theme_override_colors/default_color = Color(0.29586652, 0.2958665, 0.2958665, 1)
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_jkdf5")
bbcode_enabled = true
script = ExtResource("9_oiid6")

[node name="Header" type="Label" parent="ScrollContainer/Top"]
layout_mode = 0
offset_left = 190.0
offset_top = 146.0
offset_right = 961.0
offset_bottom = 193.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_jkdf5")
text = "Help!"
label_settings = SubResource("LabelSettings_k12tt")

[node name="Button" type="Button" parent="ScrollContainer/Top"]
visible = false
layout_mode = 0
offset_left = 739.0
offset_top = 440.0
offset_right = 955.0
offset_bottom = 487.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.38928607, 0.38928694, 0.38928625, 1)
theme_override_font_sizes/font_size = 40
text = "Reply"

[node name="Bottom" type="Panel" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 360.21)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_6iyac")
script = ExtResource("10_uoko6")

[node name="response" type="RichTextLabel" parent="ScrollContainer/Bottom"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 959.0
offset_bottom = 301.0
mouse_filter = 1
theme_override_colors/default_color = Color(0.27022192, 0.27022192, 0.2702219, 1)
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_jkdf5")
bbcode_enabled = true
autowrap_mode = 2

[node name="Send" type="Button" parent="ScrollContainer/Bottom"]
layout_mode = 0
offset_left = 739.0
offset_top = 304.0
offset_right = 955.0
offset_bottom = 351.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.38928607, 0.38928694, 0.38928625, 1)
theme_override_font_sizes/font_size = 40
text = "Send"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 232.0
offset_right = 765.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 30
text = "| | |          INVESTIGATION          | | |"
horizontal_alignment = 1

[node name="Popups" type="Control" parent="."]
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 933.0
mouse_filter = 2

[node name="PopupVelo1" type="PanelContainer" parent="Popups"]
layout_mode = 0
offset_left = 854.0
offset_top = 523.0
offset_right = 1147.0
offset_bottom = 639.0
pivot_offset = Vector2(70.575, 110.995)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_kcuqx")
script = ExtResource("12_kcuqx")

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/PopupVelo1"]
layout_mode = 2

[node name="Augmenter" type="Button" parent="Popups/PopupVelo1/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.38928607, 0.38928694, 0.38928625, 1)
theme_override_font_sizes/font_size = 40
text = "Augmente"

[node name="Diminuer" type="Button" parent="Popups/PopupVelo1/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.38928607, 0.38928694, 0.38928625, 1)
theme_override_font_sizes/font_size = 40
text = "Diminue"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Down" to="." method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="Down" to="." method="_on_down_mouse_exited"]
[connection signal="pressed" from="ScrollContainer/Top/Button" to="ScrollContainer/Bottom" method="_on_button_pressed"]
